# SiameseMatching

./: Makefile  README.md  pyproject.toml
config/: config.yaml
config/architecture/: siamese.yaml
consts/: consts.py  paths.py
dataset/: dataset.py
dataset/metadata/: generate_metadata.py
experiments/: siamese_experiment.py
modeling/: pipeline.py
modeling/train/: input.py  preprocess.py  training.py
modeling/train/utils/: pytorchutils.py
models/: resnet.py  siamese.py
visualization/: plot.py
